[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixi"
version = "0.1.14"
description = "A Python package for healing and wellness"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
dependencies = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["health", "wellness", "healing", "llm", "shell", "fix"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
fixi = "heal.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/heal"
Repository = "https://github.com/yourusername/heal"
Issues = "https://github.com/yourusername/heal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["heal*"]

[tool.setuptools.package-data]
heal = ["*.py", "*.txt", "*.md"]
